build bitonic_sort library only if conan_package

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,23 +17,25 @@ target_sources(bitonic_sort
 )
 target_link_libraries(bitonic_sort PRIVATE OpenCL::OpenCL)
 
-add_library(BitonicSort bitonic_sort.cpp)
-target_link_libraries(BitonicSort PRIVATE OpenCL::OpenCL)
-target_include_directories(BitonicSort PUBLIC
-    $<BUILD_INTERFACE:${INCLUDE_DIR}>
-    $<INSTALL_INTERFACE:include>
-)
+if(DEFINED ENV{CONAN_PACKAGE})
+    add_library(BitonicSort bitonic_sort.cpp)
+    target_link_libraries(BitonicSort PRIVATE OpenCL::OpenCL)
+    target_include_directories(BitonicSort PUBLIC
+        $<BUILD_INTERFACE:${INCLUDE_DIR}>
+        $<INSTALL_INTERFACE:include>
+    )
 
-install(TARGETS BitonicSort EXPORT BitonicSortTargets
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib
-    RUNTIME DESTINATION bin
-    INCLUDES DESTINATION include
-)
+    install(TARGETS BitonicSort EXPORT BitonicSortTargets
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include
+    )
 
-install(DIRECTORY ${INCLUDE_DIR}/BitonicSort DESTINATION include)
+    install(DIRECTORY ${INCLUDE_DIR}/BitonicSort DESTINATION include)
 
-install(EXPORT BitonicSortTargets
-    FILE BitonicSortConfig.cmake
-    DESTINATION lib/cmake/BitonicSort
-)
+    install(EXPORT BitonicSortTargets
+        FILE BitonicSortConfig.cmake
+        DESTINATION lib/cmake/BitonicSort
+    )
+endif()
