--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -6,6 +6,10 @@ set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 find_package(GTest REQUIRED)
 find_package(OpenCL REQUIRED)
 
+set(KERNEL_SOURCE     ${CMAKE_SOURCE_DIR}/src/bitonic_sort.cl)
+set(KERNEL_OUTPUT_DIR ${CMAKE_BINARY_DIR}/tests/unit)
+file(COPY ${KERNEL_SOURCE} DESTINATION ${KERNEL_OUTPUT_DIR})
+
 add_executable(unit_bitonic_sort bitonic_sort_unit_test.cpp)
 target_sources(unit_bitonic_sort
     PRIVATE
