--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(./src)
+add_subdirectory(./compare)
 
 option(ENABLE_TESTS "Enable testing" ON)
 if(ENABLE_TESTS)
