--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 
 find_package(OpenCL REQUIRED)
 
-set(KERNEL_SOURCE     ${CMAKE_SOURCE_DIR}/src/bitonic_sort.cl)
+set(KERNEL_SOURCE     ${CMAKE_SOURCE_DIR}/include/BitonicSort/cl/kernels/bitonic_sort.cl)
 set(KERNEL_OUTPUT_DIR ${CMAKE_BINARY_DIR}/src)
 file(COPY ${KERNEL_SOURCE} DESTINATION ${KERNEL_OUTPUT_DIR})
 
