--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: CMake release config
         run: |
           conan install . --build=missing -s build_type=Release
-          cmake --preset linux-release
+          cmake --preset release
           cmake --build build/Release
 
       - name: CMake release test
@@ -43,7 +43,7 @@ jobs:
       - name: CMake debug config
         run: |
           conan install . --build=missing -s build_type=Debug
-          cmake --preset linux-debug
+          cmake --preset debug
           cmake --build build/Debug
 
       - name: CMake debug test
