--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: install OpenCL headers and loader
-        run: |
-          sudo apt update
-          sudo apt install -y cmake ocl-icd-libopencl1 ocl-icd-opencl-dev opencl-headers
+        run: sudo apt install ocl-icd-opencl-dev
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
