--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: install OpenCL headers and loader
-        run: sudo apt install ocl-icd-opencl-dev
+        run: sudo apt install ocl-icd-opencl-dev ocl-icd-libopencl1 opencl-headers
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
