--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v4
       
       - name: install OpenCL headers and loader
-        run: sudo apt install pocl-opencl-icd
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ocl-icd-libopencl1 ocl-icd-opencl-dev
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
@@ -34,7 +36,7 @@ jobs:
       - name: CMake release config
         run: |
           conan install . --build=missing -s build_type=Release
-          cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 --preset release
+          cmake --preset release
           cmake --build build/Release
 
       - name: CMake release test
@@ -43,7 +45,7 @@ jobs:
       - name: CMake debug config
         run: |
           conan install . --build=missing -s build_type=Debug
-          cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 --preset debug
+          cmake --preset debug
           cmake --build build/Debug
 
       - name: CMake debug test
