--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: install OpenCL headers and loader
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ocl-icd-libopencl1 ocl-icd-opencl-dev
+        run: sudo apt install pocl-opencl-icd
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
