--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,10 @@ jobs:
         uses: actions/checkout@v4
       
       - name: install OpenCL headers and loader
-        run: sudo apt install pocl-opencl-icd
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential cmake
+          sudo apt install pocl-opencl-icd
 
       - name: install uv
         uses: astral-sh/setup-uv@v5
@@ -34,7 +37,7 @@ jobs:
       - name: CMake release config
         run: |
           conan install . --build=missing -s build_type=Release
-          cmake --preset deploy-release
+          cmake --preset release
           cmake --build build/Release
 
       - name: CMake release test
@@ -43,7 +46,7 @@ jobs:
       - name: CMake debug config
         run: |
           conan install . --build=missing -s build_type=Debug
-          cmake --preset deploy-debug
+          cmake --preset debug
           cmake --build build/Debug
 
       - name: CMake debug test
