--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -4,7 +4,7 @@ project(unit)
 set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 
 find_package(GTest REQUIRED)
-find_package(OpenCL REQUIRED)
+find_package(OpenCL 2.0 REQUIRED)
 
 set(KERNEL_SOURCE     ${CMAKE_SOURCE_DIR}/include/BitonicSort/cl/kernels/bitonic_sort.cl)
 set(KERNEL_OUTPUT_DIR ${CMAKE_BINARY_DIR}/tests/unit)
