--- a/tests/end_to_end/CMakeLists.txt
+++ b/tests/end_to_end/CMakeLists.txt
@@ -4,5 +4,6 @@ project(end_to_end)
 set(PYTHON_SCRIPT_RUN "${CMAKE_SOURCE_DIR}/tests/end_to_end/run_tests.py")
 add_test(
     NAME run_bitonic_sort_test_target
-    COMMAND bash -c "python3 ${PYTHON_SCRIPT_RUN}"
+    COMMAND ${CMAKE_COMMAND} -E env
+            ${Python3_EXECUTABLE} ${PYTHON_SCRIPT_RUN}
 )
